[ADD] code_generator: support copy module auto_backup - Copy xml web UI - Recreate cron xml from existing ir_cron - Support help - Support multi-view search, tree, form - Support header, body of form - Support server_action - Support act_window - Keep in memory the code - Support support generic menu, application with root menu, specific menu - Fix views wizard unique access security - Warning about store m2o_model when using search - Support icon from template to code_generator - For code generator, add logo of code_generator to template C - Fix TEMP module name, fix when running without template C - Move extractor view and extractor python module - Support header import file python code reader - Write manifest description and author support multiline string - Hide model attribute string when using default - Generate access and disable default access - Fix MODULE_NAME in hook - Fix csv access fetch correctly xml_id and add endline for csv file - Support i18n multi-lang with Plural-Forms - Support header license from module license - Support import os and keep variable short_name in manifest

--- a/code_generator/views/code_generator.xml
+++ b/code_generator/views/code_generator.xml
@@ -12,6 +12,12 @@
         <attribute name="edit">1</attribute>
       </form>
 
+      <xpath expr="//field[@name='icon_image']" position="after">
+        <!--        <field name="icon_child_image" widget="image" class="oe_avatar" attrs="{'invisible' : [('icon_child_image', '=', False)]}"/>-->
+        <field name="icon_child_image" widget="image" class="oe_avatar"/>
+        <field name="icon_real_image" widget="image" class="oe_avatar"/>
+      </xpath>
+
       <xpath expr="//field[@name='icon_image']" position="replace"/>
 
       <xpath expr="//div[hasclass('oe_title')]" position="replace">
