--- a/code_generator/views/code_generator.xml
+++ b/code_generator/views/code_generator.xml
@@ -39,12 +39,12 @@
                     class="btn btn-primary"
                     context="{'default_code_generator_id': id, 'default_user_id': uid}"/>
             <button name="%(code_generator_add_model_action)d"
-                    string="Model"
+                    string="Models"
                     type="action"
                     class="btn btn-primary"
                     context="{'default_code_generator_id': id, 'default_user_id': uid}"/>
             <button name="%(code_generator_add_controller_action)d"
-                    string="Controller"
+                    string="Controllers"
                     type="action"
                     class="btn btn-primary"
                     context="{'default_code_generator_id': id, 'default_user_id': uid}"/>
