[FIX] code_generator leaflet: better support with less field - when only 1 field of geo_, ignore selection type to choose. - error with website_leaflet scss, exclude it from manifest - add missing button enable_generate_geoengine - better support field type selection with selection string of list

--- a/code_generator_website_leaflet/wizards/code_generator_generate_views_wizard.xml
+++ b/code_generator_website_leaflet/wizards/code_generator_generate_views_wizard.xml
@@ -10,6 +10,7 @@
         <page name="website" string="Website">
           <group>
             <field name="enable_generate_website_leaflet" attrs="{'invisible': [('enable_generate_all', '=', True)]}"/>
+            <field name="enable_generate_geoengine" attrs="{'invisible': [('enable_generate_all', '=', True)]}"/>
           </group>
           <!--              <group string="Model" attrs="{'invisible': [('all_model', '=', True)]}">-->
           <!--                <field name="selected_model_ids" nolabel="1"/>-->
