--- a/code_generator_db_servers/views/code_generator.xml
+++ b/code_generator_db_servers/views/code_generator.xml
@@ -78,10 +78,15 @@
     <field name="name">code.generator.db.table.tree</field>
     <field name="model">code.generator.db.table</field>
     <field name="arch" type="xml">
-      <tree editable="top">
+      <tree editable="top" decoration-success="has_update and not delete" decoration-muted="delete">
         <field name="m2o_db"/>
         <field name="name"/>
         <field name="nomenclator" widget="boolean_toggle"/>
+        <field name="new_model_name"/>
+        <field name="new_description"/>
+        <field name="new_rec_name"/>
+        <field name="delete"/>
+        <field name="has_update" invisible="1"/>
       </tree>
     </field>
   </record>
@@ -126,11 +131,27 @@
     <field name="name">code.generator.db.column.tree</field>
     <field name="model">code.generator.db.column</field>
     <field name="arch" type="xml">
-      <tree editable="top">
+      <tree editable="top" decoration-success="has_update and not temporary_name_field" decoration-muted="temporary_name_field">
         <field name="m2o_table"/>
         <field name="name"/>
+        <field name="description"/>
         <field name="column_type"/>
         <field name="required"/>
+        <field name="new_name"/>
+        <field name="new_string"/>
+        <field name="new_type"/>
+        <field name="new_required"/>
+        <field name="new_change_required"/>
+        <field name="force_widget"/>
+        <field name="add_one2many"/>
+        <field name="sql_select_modify"/>
+        <field name="compute_data_function"/>
+        <field name="path_binary"/>
+        <field name="new_help"/>
+        <field name="delete"/>
+        <field name="ignore_field"/>
+        <field name="has_update" invisible="1"/>
+        <field name="temporary_name_field" invisible="1"/>
       </tree>
     </field>
   </record>
