--- a/code_generator/wizards/code_generator_generate_views_wizard.xml
+++ b/code_generator/wizards/code_generator_generate_views_wizard.xml
@@ -32,8 +32,8 @@
           </group>
           <notebook>
             <page name="internal_view" string="Internal view">
-              <group string="Model View List" attrs="{'invisible': [('all_model', '=', True)]}">
-                <field name="selected_model_list_view_ids" nolabel="1"/>
+              <group string="Model View Tree" attrs="{'invisible': [('all_model', '=', True)]}">
+                <field name="selected_model_tree_view_ids" nolabel="1"/>
               </group>
               <group string="Model View Form" attrs="{'invisible': [('all_model', '=', True)]}">
                 <field name="selected_model_form_view_ids" nolabel="1"/>
